--- a/How-to-FMI/app/index.html
+++ b/How-to-FMI/app/index.html
@@ -17,6 +17,7 @@
     <!-- Styles -->
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/part1.css">
 
     <!-- Modules and routing-->
     <script src="js/module.js"></script>
