--- a/How-to-FMI/app/index.html
+++ b/How-to-FMI/app/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/feed.css">
     <link rel="stylesheet" href="css/main-style.css">
     <link rel="stylesheet" href="css/part1.css">
+    <link rel="stylesheet" href="css/time-icon-style.css">
 
     <!-- Modules and routing-->
     <script src="js/module.js"></script>
@@ -36,13 +37,11 @@
     <script src="js/controllers/forum-controller.js"></script>
     <script src="js/controllers/jobs-controller.js"></script>
     <script src="js/controllers/students-candidates-controller.js"></script>
+    <script src="js/controllers/notifications-controller.js"></script>
     
 
     <!--Directives-->
     <script src="js/directives/feed.js"></script>
-
-
-
 
     <!-- Calendar -->
     <link rel="stylesheet" href="lib/fullcalendar/dist/fullcalendar.css"/>
@@ -71,6 +70,7 @@
             <input id="search" type="text" placeholder="Search">
             <button id="search-button" type="submit"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
           </form>
+          <a href="#!/notifications" id="notifications-bell"><span class="glyphicon glyphicon-bell" aria-hidden="true"></span></a>
           <a href="/" id="messages"><img src="resources/images/envelope.png" alt=""></span></a>
           <a href="#!/profile"><img src="resources/images/grumpy.jpg" alt=""></a>
         </div>
