--- a/How-to-FMI/app/index.html
+++ b/How-to-FMI/app/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="css/part1.css">
     <link rel="stylesheet" href="css/time-icon-style.css">
     <link rel="stylesheet" href="css/login-style.css">
+    <link rel="stylesheet" href="css/education-style.css">
 
     <!-- Modules and routing-->
     <script src="js/module.js"></script>
@@ -39,10 +40,12 @@
     <script src="js/controllers/jobs-controller.js"></script>
     <script src="js/controllers/students-candidates-controller.js"></script>
     <script src="js/controllers/notifications-controller.js"></script>
+    <script src="js/controllers/login-controller.js"></script>
     
 
     <!--Directives-->
     <script src="js/directives/feed.js"></script>
+    <script src="js/directives/small-calendar.js"></script>
 
     <!-- Calendar -->
     <link rel="stylesheet" href="lib/fullcalendar/dist/fullcalendar.css"/>
