navigation directive added

--- a/How-to-FMI/app/index.html
+++ b/How-to-FMI/app/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/time-icon-style.css">
     <link rel="stylesheet" href="css/login-style.css">
     <link rel="stylesheet" href="css/education-style.css">
+    <link rel="stylesheet" href="css/navigation-path.css">
 
     <!-- Modules and routing-->
     <script src="js/module.js"></script>
@@ -46,6 +47,7 @@
     <!--Directives-->
     <script src="js/directives/feed.js"></script>
     <script src="js/directives/small-calendar.js"></script>
+    <script src="js/directives/navigation-path.js"></script>
 
     <!-- Calendar -->
     <link rel="stylesheet" href="lib/fullcalendar/dist/fullcalendar.css"/>
