--- a/How-to-FMI/app/index.html
+++ b/How-to-FMI/app/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="css/part1.css">
     <link rel="stylesheet" href="css/time-icon-style.css">
     <link rel="stylesheet" href="css/login-style.css">
+    <link rel="stylesheet" href="css/style_2.css">
 
     <!-- Modules and routing-->
     <script src="js/module.js"></script>
@@ -39,6 +40,11 @@
     <script src="js/controllers/jobs-controller.js"></script>
     <script src="js/controllers/students-candidates-controller.js"></script>
     <script src="js/controllers/notifications-controller.js"></script>
+    <script src="js/controllers/register-controller.js"></script>
+    <script src="js/controllers/faq-controller.js"></script>
+    <script src="js/controllers/students-info-controller.js"></script>
+    <script src="js/controllers/materials-controller.js"></script>
+    <script src="js/controllers/all-courses-controller.js"></script>
     
 
     <!--Directives-->
