--- a/How-to-FMI/app/index.html
+++ b/How-to-FMI/app/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="css/login-style.css">
     <link rel="stylesheet" href="css/education-style.css">
     <link rel="stylesheet" href="css/navigation-path.css">
+    <link rel="stylesheet" href="css/course-style.css">
 
     <!-- Modules and routing-->
     <script src="js/module.js"></script>
@@ -42,7 +43,7 @@
     <script src="js/controllers/students-candidates-controller.js"></script>
     <script src="js/controllers/notifications-controller.js"></script>
     <script src="js/controllers/login-controller.js"></script>
-    
+    <script src="js/controllers/course-controller.js"></script>
 
     <!--Directives-->
     <script src="js/directives/feed.js"></script>
