--- a/How-to-FMI/app/index.html
+++ b/How-to-FMI/app/index.html
@@ -76,12 +76,12 @@
     <a href="#!/"><img src="resources/images/logo_mini.png" alt=""></a>
       <nav>
         <ul>
-          <li><a href="#!/">Начало</a></li>
-          <li><a href="#!/education">Обучение</a></li>
-          <li><a href="#!/calendar">Календар</a></li>
-          <li><a href="#!/forum">Форум</a></li>
-          <li><a href="#!/jobs">Работа</a></li>
-          <li><a href="#!/students-candidates">Кандидат-студенти</a></li>
+          <li><a class="hover-underline" href="#!/">Начало</a></li>
+          <li><a class="hover-underline" href="#!/education">Обучение</a></li>
+          <li><a class="hover-underline" href="#!/calendar">Календар</a></li>
+          <li><a class="hover-underline" href="#!/forum">Форум</a></li>
+          <li><a class="hover-underline" href="#!/jobs">Работа</a></li>
+          <li><a class="hover-underline" href="#!/students-candidates">Кандидат-студенти</a></li>
         </ul>
         <div>
           <form class="form-inline my-2">
