Notification page added

--- a/How-to-FMI/app/index.html
+++ b/How-to-FMI/app/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="css/education-style.css">
     <link rel="stylesheet" href="css/navigation-path.css">
     <link rel="stylesheet" href="css/course-style.css">
+    <link rel="stylesheet" href="css/notifications-style.css">
 
     <!-- Modules and routing-->
     <script src="js/module.js"></script>
@@ -34,7 +35,7 @@
     <!--Controllers-->
     <!--<script src="js/controllers/main-controller.js"></script> -->
     
-    <script src="js/controllers/how-to-fmi-controller.js"></script>
+    <script src="js/controllers/how-to-fmi-controller.js"></script>p
     <script src="js/controllers/main-controller.js"></script>
     <script src="js/controllers/calendar-controller.js"></script>
     <script src="js/controllers/small-calendar-controller.js"></script>
