Schedule page addded

--- a/How-to-FMI/app/index.html
+++ b/How-to-FMI/app/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="css/navigation-path.css">
     <link rel="stylesheet" href="css/course-style.css">
     <link rel="stylesheet" href="css/notifications-style.css">
+    <link rel="stylesheet" href="css/schedule-degree-style.css">
 
     <!-- Modules and routing-->
     <script src="js/module.js"></script>
@@ -51,6 +52,7 @@
     <script src="js/controllers/students-info-controller.js"></script>
     <script src="js/controllers/materials-controller.js"></script>
     <script src="js/controllers/all-courses-controller.js"></script>
+    <script src="js/controllers/schedule-degree-controller.js"></script>
     
 
     <!--Directives-->
