adding new pages

--- a/How-to-FMI/app/index.html
+++ b/How-to-FMI/app/index.html
@@ -23,6 +23,9 @@
     <link rel="stylesheet" href="css/time-icon-style.css">
     <link rel="stylesheet" href="css/login-style.css">
     <link rel="stylesheet" href="css/style_2.css">
+    <link rel="stylesheet" href="css/education-style.css">
+    <link rel="stylesheet" href="css/navigation-path.css">
+    <link rel="stylesheet" href="css/course-style.css">
 
     <!-- Modules and routing-->
     <script src="js/module.js"></script>
@@ -40,6 +43,8 @@
     <script src="js/controllers/jobs-controller.js"></script>
     <script src="js/controllers/students-candidates-controller.js"></script>
     <script src="js/controllers/notifications-controller.js"></script>
+    <script src="js/controllers/login-controller.js"></script>
+    <script src="js/controllers/course-controller.js"></script>
     <script src="js/controllers/register-controller.js"></script>
     <script src="js/controllers/faq-controller.js"></script>
     <script src="js/controllers/students-info-controller.js"></script>
@@ -49,6 +54,8 @@
 
     <!--Directives-->
     <script src="js/directives/feed.js"></script>
+    <script src="js/directives/small-calendar.js"></script>
+    <script src="js/directives/navigation-path.js"></script>
 
     <!-- Calendar -->
     <link rel="stylesheet" href="lib/fullcalendar/dist/fullcalendar.css"/>
@@ -86,7 +93,7 @@
           <div class="dropdown">
             <span onclick="dropdown()" class="glyphicon glyphicon-chevron-down dropbtn" aria-hidden="true"></span>
             <div id="nav-dropdown" class="dropdown-content">
-              <a href="#">Блаблабла</a>
+              <a href="#!/grades">Оценки</a>
               <a href="#">Настройки</a>
               <a href="#!/login">Изход</a>
             </div>
