removed unused controller

--- a/How-to-FMI/app/index.html
+++ b/How-to-FMI/app/index.html
@@ -43,7 +43,6 @@
     <script src="js/controllers/education-controller.js"></script>
     <script src="js/controllers/forum-controller.js"></script>
     <script src="js/controllers/jobs-controller.js"></script>
-    <script src="js/controllers/students-candidates-controller.js"></script>
     <script src="js/controllers/notifications-controller.js"></script>
     <script src="js/controllers/login-controller.js"></script>
     <script src="js/controllers/course-controller.js"></script>
@@ -84,7 +83,7 @@
           <li><a class="hover-underline" href="#!/calendar">Календар</a></li>
           <li><a class="hover-underline" href="#!/forum">Форум</a></li>
           <li><a class="hover-underline" href="#!/jobs">Работа</a></li>
-          <li><a class="hover-underline" href="#!/students-candidates">Кандидат-студенти</a></li>
+          <li><a class="hover-underline" href="#!/students-info">Кандидат-студенти</a></li>
         </ul>
         <div>
           <form class="form-inline my-2">
