--- a/How-to-FMI/app/index.html
+++ b/How-to-FMI/app/index.html
@@ -95,7 +95,20 @@
     <article ng-view id="contentView"></article>
 
     <footer>
-      
+	  <div class="col-md-11">
+				<ul class="list-unstyled">
+					<li><a href="#!/contacts" class="footer-ref">Контакти</a></li>
+					<li><a href="#!/faq" class="footer-ref">FAQ</a></li>
+					<li><a href="#!/materials" class="footer-ref">Полезни връзки</a></li>
+				</ul>
+	  </div>
+	  <div class="col-md-1 footer-ref">
+		<p>Адрес</p></div>
+		<a href="#!/contacts"><img src="resources/images/gmaps.jpg" id="footer-image">
+	<div class="col-md-2 footer-ref">
+		<hr>
+				By Toni, Kremi, Desi ©
+	<div>
     </footer>
   </body>
 
