added jobs page

--- a/How-to-FMI/app/index.html
+++ b/How-to-FMI/app/index.html
@@ -53,6 +53,8 @@
     <script src="js/controllers/materials-controller.js"></script>
     <script src="js/controllers/all-courses-controller.js"></script>
     <script src="js/controllers/schedule-degree-controller.js"></script>
+    <!-- Kremi -->
+    <script src="js/controllers/jobs-controller.js"></script>
     
 
     <!--Directives-->
