Style corections, removed unnecessary controllers

--- a/How-to-FMI/app/index.html
+++ b/How-to-FMI/app/index.html
@@ -15,6 +15,7 @@
     <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   
     <!-- Styles -->
+    <!-- bower:css -->
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/feed.css">
@@ -29,8 +30,10 @@
     <link rel="stylesheet" href="css/notifications-style.css">
     <link rel="stylesheet" href="css/schedule-degree-style.css">
     <link rel="stylesheet" href="css/profile-style.css">
+    <!-- endbower -->
 
     <!-- Modules and routing-->
+    <!-- bower:js -->
     <script src="js/module.js"></script>
     <script src="js/routing.js"></script>
 
@@ -39,18 +42,13 @@
     
     <script src="js/controllers/how-to-fmi-controller.js"></script>
     <script src="js/controllers/main-controller.js"></script>
-    <script src="js/controllers/calendar-controller.js"></script>
-    <script src="js/controllers/small-calendar-controller.js"></script>
     <script src="js/controllers/education-controller.js"></script>
-    <script src="js/controllers/forum-controller.js"></script>
     <script src="js/controllers/jobs-controller.js"></script>
     <script src="js/controllers/notifications-controller.js"></script>
     <script src="js/controllers/login-controller.js"></script>
     <script src="js/controllers/course-controller.js"></script>
-    <script src="js/controllers/register-controller.js"></script>
     <script src="js/controllers/faq-controller.js"></script>
     <script src="js/controllers/students-info-controller.js"></script>
-    <script src="js/controllers/materials-controller.js"></script>
     <script src="js/controllers/all-courses-controller.js"></script>
     <script src="js/controllers/schedule-degree-controller.js"></script>
     <script src="js/controllers/profile-controller.js"></script>
@@ -59,6 +57,7 @@
     <script src="js/directives/feed.js"></script>
     <script src="js/directives/small-calendar.js"></script>
     <script src="js/directives/navigation-path.js"></script>
+    <!-- endbower -->
 
     <!-- Calendar -->
     <link rel="stylesheet" href="lib/fullcalendar/dist/fullcalendar.css"/>
