--- a/How-to-FMI/app/index.html
+++ b/How-to-FMI/app/index.html
@@ -117,7 +117,7 @@
     <a href="#!/"><img src="resources/images/logo_mini.png" alt=""></a>
       <nav>
         <ul>
-          <li><a class="hover-underline" href="#!/">Начало</a></li>
+          <li><a class="hover-underline" href="#!/home">Начало</a></li>
           <li><a class="hover-underline" href="#!/education">Обучение</a></li>
           <li><a class="hover-underline" href="#!/calendar">Календар</a></li>
           <li><a class="hover-underline" href="#!/forum">Форум</a></li>
