--- a/How-to-FMI/app/index.html
+++ b/How-to-FMI/app/index.html
@@ -48,6 +48,7 @@
     <script src="lib/underscore/underscore.js"></script>
     <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="lib/angular-facebook/lib/angular-facebook.js"></script>
+    <script src="lib/ngstorage/ngStorage.js"></script>
 
     <!-- Styles -->
     <!-- bower:css -->
