--- a/How-to-FMI/app/index.html
+++ b/How-to-FMI/app/index.html
@@ -88,6 +88,7 @@
     <script src="js/controllers/all-courses-controller.js"></script>
     <script src="js/controllers/schedule-degree-controller.js"></script>
     <script src="js/controllers/profile-controller.js"></script>
+    <script src="js/controllers/user-registration-controller.js"></script>
 
     <!--Services-->
     <script src="js/services/resources.js"></script>
