Add moodle integration

--- a/How-to-FMI/app/index.html
+++ b/How-to-FMI/app/index.html
@@ -89,6 +89,9 @@
     <script src="js/controllers/schedule-degree-controller.js"></script>
     <script src="js/controllers/profile-controller.js"></script>
     <script src="js/controllers/user-registration-controller.js"></script>
+    <script src="js/controllers/moodle-controller.js"></script>
+    <script src="js/controllers/enrolled-courses-controller.js"></script>
+    <script src="js/controllers/moodle-integration-controller.js"></script>
 
     <!--Services-->
     <script src="js/services/resources.js"></script>
