Add html rendering (ngSanitize)

--- a/How-to-FMI/app/index.html
+++ b/How-to-FMI/app/index.html
@@ -49,6 +49,7 @@
     <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="lib/angular-facebook/lib/angular-facebook.js"></script>
     <script src="lib/ngstorage/ngStorage.js"></script>
+    <script src="lib/angular-sanitize/angular-sanitize.js"></script>
 
     <!-- Styles -->
     <!-- bower:css -->
@@ -89,9 +90,9 @@
     <script src="js/controllers/schedule-degree-controller.js"></script>
     <script src="js/controllers/profile-controller.js"></script>
     <script src="js/controllers/user-registration-controller.js"></script>
-    <script src="js/controllers/moodle-controller.js"></script>
     <script src="js/controllers/enrolled-courses-controller.js"></script>
     <script src="js/controllers/moodle-integration-controller.js"></script>
+    <script src="js/controllers/messages-controller.js"></script>
 
     <!--Services-->
     <script src="js/services/resources.js"></script>
@@ -136,7 +137,7 @@
             <button id="search-button" type="submit"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
           </form>
           <a href="#!/notifications" id="notifications-bell"><span class="glyphicon glyphicon-bell" aria-hidden="true"></span></a>
-          <a href="/" id="messages"><img src="resources/images/envelope.png" alt=""></span></a>
+          <a href="#!/messages" id="messages"><img src="resources/images/envelope.png" alt=""></span></a>
           <div class="dropdown">
             <span onclick="dropdown()" class="glyphicon glyphicon-chevron-down dropbtn" aria-hidden="true"></span>
             <div id="nav-dropdown" class="dropdown-content">
