--- a/How-to-FMI/app/index.html
+++ b/How-to-FMI/app/index.html
@@ -128,7 +128,7 @@
           <li><a class="hover-underline" href="#!/education">Обучение</a></li>
           <li><a class="hover-underline" href="#!/calendar">Календар</a></li>
           <li><a class="hover-underline" href="#!/forum">Форум</a></li>
-          <li><a class="hover-underline" href="#!/jobs">Работа</a></li>
+          <li><a class="hover-underline" href="#!/enrolled">Курсове</a></li>
           <li><a class="hover-underline" href="#!/students-info">Кандидат-студенти</a></li>
         </ul>
         <div>
@@ -147,7 +147,7 @@
               <a href="#!/login">Изход</a>
             </div>
           </div>
-          <a href="#!/profile"><img ng-src="{{profilePicture}}" alt=""></a>
+          <a href="#!/profile/:profilemenu"><img ng-src="{{profilePicture}}" alt=""></a>
         </div>
 
       </nav>
